force-app/main/default/objects/CTRRequestFormHeader__c.object
<CustomObject>
    <fields>
        <fullName>SupplierSearchTermLocal__c</fullName>
        <label>Supplier Search Term (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierSupplyProductTo__c</fullName>
        <label>Supplier Supply Product To?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierType__c</fullName>
        <label>Supplier Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturers</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
                <value>
                    <fullName>Distributors</fullName>
                </value>
                <value>
                    <fullName>Importers</fullName>
                </value>
                <value>
                    <fullName>Retailers</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Dropshippers</fullName>
                </value>
                <value>
                    <fullName>Specialist Suppliers</fullName>
                </value>
                <value>
                    <fullName>Sub-Contractors</fullName>
                </value>
                <value>
                    <fullName>Trade Show Reps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuppliersFacilityTankAndStorage__c</fullName>
        <label>Supplier&apos;s Facility (Tank and Storage)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FacilityTankAndStorage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuppliersFacilityTransportation__c</fullName>
        <label>Supplier&apos;s Facility (Transportation)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FacilityTransportation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAXClassification__c</fullName>
        <label>TAX Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TaxClassification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAXNumberDatanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TAX number (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAXNumber__c</fullName>
        <label>TAX Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxCode1__c</fullName>
        <label>Tax Code1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermofPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TermofPayment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Payment Term</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>CTR Request Form Header (TermofPayment)</relationshipLabel>
        <relationshipName>CTR_Request_Form_Header6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TimeZone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TradderLicenseNumber__c</fullName>
        <label>Tradder&apos;s license number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradingPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trading Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Trading Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>CTR Request Form Header (Trading Partner)</relationshipLabel>
        <relationshipName>CTR_Request_Form_Header8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransportationZone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transportation Zone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Transportation Zone</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>CTR Request Form Header (Transportation Zone)</relationshipLabel>
        <relationshipName>CTR_Request_Form_Header3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TypeOfBusinessBranch__c</fullName>
        <label>Type of Business (Branch)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TypeOfBusinessBranch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfBusinessCommercialEvaluation__c</fullName>
        <label>Type Of Business (Commercial Evaluation)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National Oil Company</fullName>
                </value>
                <value>
                    <fullName>Major Oil Company</fullName>
                </value>
                <value>
                    <fullName>Trading Firm</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Refinery</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Other Trading Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfBusinessOthers__c</fullName>
        <label>Type of Business Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfBusiness__c</fullName>
        <label>Type of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National Oil Company</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Trader &amp; Distributor</fullName>
                </value>
                <value>
                    <fullName>Other (Please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UltimateParentCompany__c</fullName>
        <label>Ultimate Parent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnderdeliveryTolerance__c</fullName>
        <label>Underdelivery Tolerance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViolatingAntiMoneyLaunderingLaws__c</fullName>
        <description>Are any of your company, company&apos;s directors, shareholders, beneficial owners violating anti-money laundering laws?</description>
        <label>Violating anti-money laundering laws</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WHTaxCountryDatanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WH Tax Country (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WHTaxCountry__c</fullName>
        <label>WH Tax Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wthttype1Datanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wth.t.type 1 Data not correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wthttype1__c</fullName>
        <label>Wth t type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wthttype2Datanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wth.t.type2Datanotcorrect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wthttype2__c</fullName>
        <label>Wth.t.type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yearofexperience__c</fullName>
        <description>Year of experience in selling the products you intend to purchase</description>
        <label>Year of experience</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CTR Request Form Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>RecordTypeName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Request Form Header Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Blocking</fullName>
        <active>true</active>
        <label>Blocking</label>
    </recordTypes>
    <recordTypes>
        <fullName>ChangeCrCondition</fullName>
        <active>true</active>
        <label>Change Credit Condition</label>
    </recordTypes>
    <recordTypes>
        <fullName>ChangeMasterFile</fullName>
        <active>true</active>
        <label>Change Master File</label>
    </recordTypes>
    <recordTypes>
        <fullName>EditInformation</fullName>
        <active>true</active>
        <label>Edit Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extension</fullName>
        <active>true</active>
        <label>Extension</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewCounterparty</fullName>
        <active>true</active>
        <label>New Counterparty</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShipToChckCountry</fullName>
        <active>true</active>
        <label>Check Ship-to</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShipToCreate</fullName>
        <active>true</active>
        <label>Create Ship-to</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShipToEdit</fullName>
        <active>true</active>
        <label>Edit Ship-to</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TAX_ExactLength</fullName>
        <active>true</active>
        <description>Length to be kept to exactly</description>
        <errorConditionFormula>IF(
  AND(
    NOT(ISBLANK(TaxCode1__c)),
    (Country__r.Code__c = &quot;PL&quot;),
    LEN(TaxCode1__c) != 13
  ),
  TRUE,
  FALSE
)</errorConditionFormula>
        <errorDisplayField>TaxCode1__c</errorDisplayField>
        <errorMessage>TAX number length needs to be kept exactly</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TAX_ExactLengthNumericWithoutGaps</fullName>
        <active>true</active>
        <description>Length to be kept to exactly, numerical, without gaps</description>
        <errorConditionFormula>IF(
  AND(
    NOT(ISBLANK(TaxCode1__c)),
    (Country__r.Code__c = &quot;BR&quot;),
    NOT(REGEX(TaxCode1__c, &quot;[0-9]{14}&quot;))
  ),
  TRUE,
  IF(
    AND(
      NOT(ISBLANK(TaxCode1__c)),
      (Country__r.Code__c = &quot;KR&quot;),
      NOT(REGEX(TaxCode1__c, &quot;[0-9]{13}&quot;))
    ),
    TRUE,
    IF(
      AND(
        NOT(ISBLANK(TaxCode1__c)),
        (Country__r.Code__c = &quot;PT&quot;),
        NOT(REGEX(TaxCode1__c, &quot;[0-9]{9}&quot;))
      ),
      TRUE,
      IF(
        AND(
          NOT(ISBLANK(TaxCode1__c)),
          (Country__r.Code__c = &quot;TH&quot;),
          NOT(REGEX(TaxCode1__c, &quot;[0-9]{13}&quot;))
        ),
        TRUE,
        IF(
          AND(
            NOT(ISBLANK(TaxCode1__c)),
            (Country__r.Code__c = &quot;ZA&quot;),
            NOT(REGEX(TaxCode1__c, &quot;[0-9]{10}&quot;))
          ),
          TRUE,
          FALSE
        )
      )
    )
  )
)</errorConditionFormula>
        <errorDisplayField>TaxCode1__c</errorDisplayField>
        <errorMessage>TAX Number length needs to be kept exactly, numeric, and without gaps</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TAX_ExactLengthWithoutGaps</fullName>
        <active>true</active>
        <description>Length to be kept to exactly, without gaps</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK(TaxCode1__c)),
  (Country__r.Code__c = &quot;ES&quot;),
  NOT(REGEX(TaxCode1__c, &quot;[a-zA-Z0-9]{9}&quot;))
)</errorConditionFormula>
        <errorDisplayField>TaxCode1__c</errorDisplayField>
        <errorMessage>TAX Number length need to be kept to exactly and without gaps</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TAX_MaxLength</fullName>
        <active>true</active>
        <description>Maximum value length</description>
        <errorConditionFormula>IF(
  AND(
    NOT(ISBLANK(TaxCode1__c)),
    (Country__r.Code__c = &quot;AU&quot;),
    LEN(TaxCode1__c) &gt; 16
  ),
  TRUE,
  IF(
    AND(
      NOT(ISBLANK(TaxCode1__c)),
      (Country__r.Code__c = &quot;CA&quot;),
      LEN(TaxCode1__c) &gt; 10
    ),
    TRUE,
    IF(
      AND(
        NOT(ISBLANK(TaxCode1__c)),
        (Country__r.Code__c = &quot;CL&quot;),
        LEN(TaxCode1__c) &gt; 11
      ),
      TRUE,
      IF(
        AND(
          NOT(ISBLANK(TaxCode1__c)),
          (Country__r.Code__c = &quot;CN&quot;),
          LEN(TaxCode1__c) &gt; 15
        ),
        TRUE,
        IF(
          AND(
            NOT(ISBLANK(TaxCode1__c)),
            (Country__r.Code__c = &quot;CZ&quot;),
            LEN(TaxCode1__c) &gt; 14
          ),
          TRUE,
          IF(
            AND(
              NOT(ISBLANK(TaxCode1__c)),
              (Country__r.Code__c = &quot;SG&quot;),
              LEN(TaxCode1__c) &gt; 16
            ),
            TRUE,
            IF(
              AND(
                NOT(ISBLANK(TaxCode1__c)),
                (Country__r.Code__c = &quot;SK&quot;),
                LEN(TaxCode1__c) &gt; 14
              ),
              TRUE,
              IF(
                AND(
                  NOT(ISBLANK(TaxCode1__c)),
                  (Country__r.Code__c = &quot;US&quot;),
                  LEN(TaxCode1__c) &gt; 11
                ),
                TRUE,
                FALSE
              )
            )
          )
        )
      )
    )
  )
)</errorConditionFormula>
        <errorDisplayField>TaxCode1__c</errorDisplayField>
        <errorMessage>TAX Number must not exceed the maximum value length</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TAX_MaxLengthNumeric</fullName>
        <active>true</active>
        <description>Maximum value length, numerical</description>
        <errorConditionFormula>IF(
  AND(
    NOT(ISBLANK(TaxCode1__c)),
    (Country__r.Code__c = &quot;CO&quot;),
    OR(LEN(TaxCode1__c) &gt; 16, NOT(ISNUMBER(TaxCode1__c)))
  ),
  TRUE,
  FALSE
)</errorConditionFormula>
        <errorDisplayField>TaxCode1__c</errorDisplayField>
        <errorMessage>TAX Number must not exceed the maximum value length and must be numeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TAX_MaxLengthNumericWithoutGaps</fullName>
        <active>true</active>
        <description>Maximum value length, numerical, without gaps</description>
        <errorConditionFormula>IF(
  AND(
    NOT(ISBLANK(TaxCode1__c)),
    (Country__r.Code__c = &quot;CH&quot;),
    OR(LEN(TaxCode1__c) &gt; 7, NOT(ISNUMBER(TaxCode1__c)))
  ),
  TRUE,
  IF(
    AND(
      NOT(ISBLANK(TaxCode1__c)),
      (Country__r.Code__c = &quot;DK&quot;),
      OR(LEN(TaxCode1__c) &gt; 7, NOT(ISNUMBER(TaxCode1__c)))
    ),
    TRUE,
    IF(
      AND(
        NOT(ISBLANK(TaxCode1__c)),
        (Country__r.Code__c = &quot;PE&quot;),
        OR(LEN(TaxCode1__c) &gt; 11, NOT(ISNUMBER(TaxCode1__c)))
      ),
      TRUE,
      IF(
        AND(
          NOT(ISBLANK(TaxCode1__c)),
          (Country__r.Code__c = &quot;PH&quot;),
          OR(LEN(TaxCode1__c) &gt; 13, NOT(ISNUMBER(TaxCode1__c)))
        ),
        TRUE,
        IF(
          AND(
            NOT(ISBLANK(TaxCode1__c)),
            (Country__r.Code__c = &quot;RU&quot;),
            OR(LEN(TaxCode1__c) &gt; 12, NOT(ISNUMBER(TaxCode1__c)))
          ),
          TRUE,
          FALSE
        )
      )
    )
  )
)</errorConditionFormula>
        <errorDisplayField>TaxCode1__c</errorDisplayField>
        <errorMessage>TAX Number must not exceed the maximum value length, be numeric, and without gaps</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TAX_MaxLengthWithoutGaps</fullName>
        <active>true</active>
        <description>Maximum TAX length, without gaps</description>
        <errorConditionFormula>IF(
  AND(
    NOT(ISBLANK(TaxCode1__c)),
    (Country__r.Code__c = &quot;BE&quot;),
    OR(LEN(TaxCode1__c) &gt; 10, REGEX(TaxCode1__c, &quot;.*\\s.*&quot;))
  ),
  TRUE,
  IF(
    AND(
      NOT(ISBLANK(TaxCode1__c)),
      (Country__r.Code__c = &quot;IT&quot;),
      OR(LEN(TaxCode1__c) &gt; 16, REGEX(TaxCode1__c, &quot;.*\\s.*&quot;))
    ),
    TRUE,
    IF(
      AND(
        NOT(ISBLANK(TaxCode1__c)),
        (Country__r.Code__c = &quot;MX&quot;),
        OR(LEN(TaxCode1__c) &gt; 13, REGEX(TaxCode1__c, &quot;.*\\s.*&quot;))
      ),
      TRUE,
      IF(
        AND(
          NOT(ISBLANK(TaxCode1__c)),
          (Country__r.Code__c = &quot;VE&quot;),
          OR(LEN(TaxCode1__c) &gt; 12, REGEX(TaxCode1__c, &quot;.*\\s.*&quot;))
        ),
        TRUE,
        FALSE
      )
    )
  )
)</errorConditionFormula>
        <errorDisplayField>TaxCode1__c</errorDisplayField>
        <errorMessage>TAX Number must not exceed the maximum value length and without gaps</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TAX_OtherRules</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  AND(
    NOT(ISBLANK(TaxCode1__c)),
    (Country__r.Code__c = &quot;VN&quot;),
    OR(LEN(TaxCode1__c) &lt; 10, LEN(TaxCode1__c) &gt; 13, NOT(ISNUMBER(TaxCode1__c)))
  ),
  TRUE,
  IF(
    AND(
      NOT(ISBLANK(TaxCode1__c)),
      (Country__r.Code__c = &quot;ID&quot;),
      OR(LEN(TaxCode1__c) != 16, NOT(ISNUMBER(TaxCode1__c)))
    ),
    TRUE,
    IF(
      AND(
        NOT(ISBLANK(TaxCode1__c)),
        (Country__r.Code__c = &quot;IN&quot;),
        NOT(
          REGEX(
            TaxCode1__c,
            &quot;[0-9]{2}[A-Z]{1}[ABCFGHJLPTK]{3}[A-Z]{1}[0-9]{4}[A-Z]{1}[a-zA-Z0-9]{1}Z[a-zA-Z0-9]{1}&quot;
          )
        )
      ),
      TRUE,
      IF(
        AND(
          NOT(ISBLANK(TaxCode1__c)),
          (Country__r.Code__c = &quot;HK&quot;),
          OR(LEN(TaxCode1__c) != 16, NOT(ISNUMBER(TaxCode1__c)))
        ),
        TRUE,
        IF(
          AND(
            NOT(ISBLANK(TaxCode1__c)),
            (Country__r.Code__c = &quot;AE&quot;),
            OR(LEN(TaxCode1__c) != 15, NOT(ISNUMBER(TaxCode1__c)))
          ),
          TRUE,
          IF(
            AND(
              NOT(ISBLANK(TaxCode1__c)),
              (Country__r.Code__c = &quot;MY&quot;),
              OR(
                LEN(TaxCode1__c) != 10,
                LEFT(TaxCode1__c, 1) != &quot;C&quot;,
                NOT(ISNUMBER(RIGHT(TaxCode1__c, 9)))
              )
            ),
            TRUE,
            IF(
              AND(
                NOT(ISBLANK(TaxCode1__c)),
                (Country__r.Code__c = &quot;JP&quot;),
                OR(LEN(TaxCode1__c) != 13, NOT(ISNUMBER(TaxCode1__c)))
              ),
              TRUE,
              FALSE
            )
          )
        )
      )
    )
  )
)</errorConditionFormula>
        <errorDisplayField>TaxCode1__c</errorDisplayField>
        <errorMessage>TAX Number must not exceed the maximum value length and without gaps</errorMessage>
    </validationRules>
</CustomObject>